--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,5 +1,25 @@
 <p>error-page works!</p>
 
-<a routerLink="/auth/login"> Ir a Login </a>
-
-<a routerLink="/auth/register"> Ir a Registro </a>
+<ul>
+  <li>
+    <a routerLink="/auth/login"> Ir a Login </a>
+  </li>
+  <li>
+    <a routerLink="/auth/register"> Ir a Registro </a>
+  </li>
+  <li>
+    <a routerLink="/heroes/agregar"> Ir a Agregar </a>
+  </li>
+  <li>
+    <a routerLink="/heroes/buscar"> Ir a Buscar </a>
+  </li>
+  <li>
+    <a routerLink="/heroes/heroe"> Ir a Héroe </a>
+  </li>
+  <li>
+    <a routerLink="/heroes/home"> Ir a Home </a>
+  </li>
+  <li>
+    <a routerLink="/heroes/listado"> Ir a Listado </a>
+  </li>
+</ul>
