--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -30,9 +30,7 @@
 
     <span class="spacer"></span>
 
-    <button mat-button color="primary">
-        Logout
-    </button>
+    <button mat-button color="primary">Logout</button>
   </mat-toolbar>
 
   <div class="container">
