--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,32 +1,39 @@
-<h1>Nuevo Héroe <small>asd</small></h1>
+<h1>
+  Nuevo Héroe <small>{{ heroe.superhero }}</small>
+</h1>
 
-<div fxLayout="row" fxLayoutGap="40px">
+<div fxLayout="row" fxLayout.xs="column" fxLayoutGap="40px">
   <div fxFlex="50" fxLayout="column">
     <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
       <mat-form-field fxFlex="50">
         <mat-label>Súper Héroe</mat-label>
-        <input matInput type="text" required />
+        <input matInput type="text" required [(ngModel)]="heroe.superhero" />
       </mat-form-field>
 
       <mat-form-field fxFlex="50">
         <mat-label>Alter Ego</mat-label>
-        <input matInput type="text" required />
+        <input matInput type="text" required [(ngModel)]="heroe.alter_ego" />
       </mat-form-field>
     </div>
 
     <mat-form-field>
       <mat-label>Primera Aparición</mat-label>
-      <input matInput type="text" required />
+      <input
+        matInput
+        type="text"
+        required
+        [(ngModel)]="heroe.first_appearance"
+      />
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Personajes</mat-label>
-      <input matInput type="text" required />
+      <input matInput type="text" required [(ngModel)]="heroe.characters" />
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Creador</mat-label>
-      <mat-select>
+      <mat-select required [(ngModel)]="heroe.publisher">
         <mat-option *ngFor="let publisher of publishers" [value]="publisher.id">
           {{ publisher.desc }}
         </mat-option>
@@ -35,12 +42,12 @@
 
     <mat-form-field>
       <mat-label>Foto Url</mat-label>
-      <input matInput type="url" required />
+      <input matInput type="url" required [(ngModel)]="heroe.alt_img" />
     </mat-form-field>
 
     <br />
 
-    <button mat-raised-button color="primary">
+    <button mat-raised-button color="primary" (click)="guardar()">
       <mat-icon>edit</mat-icon> Guardar
     </button>
   </div>
