Anguar Guards - CanLoad

--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -30,6 +30,8 @@
 
     <span class="spacer"></span>
 
+    <span>{{ auth.usuario }}</span>
+
     <button mat-button color="primary" (click)="logout()">Logout</button>
   </mat-toolbar>
 
